--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+
+/* VARIABLES */
+:root {
+    --js-color: #e0d20a;
+    --python-color: rgb(40, 113, 138);
+}
+
 /* COLORES GENERALES */
 .css-blue {
     background-color: rgb(75, 186, 223);
 }
 
-.python-blue {
-    background-color: rgb(40, 113, 138);
+.python-background {
+    background-color: var(--python-color)
 }
 
 .busuu-blue {
     background-color: #116AE8;
 }
 
-.js-yellow {
+.js-background {
     /* #FFDF00 */
-    background-color: #e0d20a;
+    background-color: var(--js-color);
 }
 
 .brain-pink {
@@ -22,6 +30,14 @@
 
 .solid-yellow {
     background-color: #F0C48A;
+}
+
+.js-font {
+    color: var(--js-color);
+}
+
+.python-font {
+    color: var(--python-color);
 }
 
 /* ENCABEZADO */
@@ -241,7 +257,7 @@ a{
     display: flex;
     align-items: center;
     width: 100%;
-    height: 304px;
+    height: 345px;
     padding: 10px 0px;
     max-width: 90vw;
     overflow: hidden;
@@ -414,3 +430,103 @@ a{
     }
 }
 
+.card{
+    /* position: relative; */
+    width: 275px;
+    /* padding: 0 18px; */
+    /* float: left; */
+    /* box-sizing: border-box; */
+    /* display: flex; */
+    /* height: 100%; */
+    
+    /* width: calc(100% / 3 - 10px); */
+    background: #fff;
+    border-radius: 12px;
+    padding: 30px;
+    margin-left: 20px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.25);
+    transition: all 0.4s ease;
+    font-family: 'Poppins',sans-serif;
+}
+
+.card:hover{
+    transform: translateY(-15px);
+}
+
+.card .content{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.card .content .img{
+    height: 130px;
+    width: 130px;
+    border-radius: 50%;
+    padding: 3px;
+    margin-bottom: 14px;
+}
+
+.card .content .img img{
+    height: 100%;
+    width: 100%;
+    border: 3px solid #ffff;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.card .content .name{
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.card .content .language{
+    font-size: 20px;
+}
+
+.card .content .media-icons{
+    margin-top: 10px;
+    display: flex;
+}
+
+.media-icons a{
+    text-align: center;
+    line-height: 33px;
+    height: 35px;
+    width: 35px;
+    margin: 0 4px;
+    font-size: 14px;
+    color: #FFF;
+    border-radius: 50%;
+    border: 2px solid transparent;
+    /* background: red; */
+    transition: all 0.3s ease;
+}
+
+.media-icons .js-background:hover{
+    color: var(--js-color);
+    background-color: #fff;
+    border-color: yellow;
+}
+
+.media-icons .python-background:hover{
+    color: var(--python-color);
+    background-color: #fff;
+    border-color: #116AE8;
+}
+
+  /* @media (max-width: 768px) {
+    .card{
+      margin: 20px 0 10px 0;
+      width: calc(100% / 2 - 10px);
+    }
+  }
+  @media (max-width: 600px) {
+    .card{
+      margin: 20px 0 10px 0;
+      width: 100%;
+    }
+  } */
